# feign

./: .gitignore  Makefile  README.md  configure  feign.env  makefile  waf  wscript
demos/: README  feign-posix.sh  feign-sample.sh  feign-siox-posix.sh  wscript
demos/posix-precreation/: Makefile  prepare.c  program.c  replay-with-strace.sh  replay-with-valgrind.sh  replay.sh  trace.sh
demos/siox-fadvice-injection/: Makefile  README  measure.sh  run-fadvise-test.sh  siox.conf  trace.sh  wscript
demos/siox-fadvise-injection/: .gitignore  Makefile  measure.sh  replay.sh
demos/siox-flash-parallel-replay/: replay.sh
demos/siox-parallel-replay-flash/: wscript
demos/siox-parallel-replay-mpiom/: README  about-rankmapping.txt  program  replay.sh  strace_replay.sh  valgrind_replay.sh
demos/siox-posix-coalescing/: .gitignore  measure.sh  replay.sh  replay_all.sh  replay_unoptimized.sh  replay_unoptimzed.sh  strace_replay.sh  wscript
demos/siox-replay/: Makefile  README  program.c  replay.sh  trace.sh
doc/: wscript
doc/assets/: Makefile  (+5 more)
include/: feign.h
plugins/: wscript
src/: README  TODO  buffer.cpp  buffer.h  common.h  feign  feign-mpi.sh  feign-posix.sh  feign-sample.sh  feign-siox-posix.sh  helper.cpp  helper.h  main.cpp  options.cpp  options.h  plugins.cpp  plugins.h  replay.cpp  replay.h  wscript
src/plugins/siox-tracereader_bak/: CMakeLists.txt  build.sh  feign.h  feign_siox-provider.cpp  wscript
src/plugins/siox-tracereader_bak/feign-plugin_posix/: README  datatypes.h  precreator.cpp  provider.cpp  replayer.cpp  wrapper.cpp  wrapper.h  wscript
(+153 files in other folders)
